updated Btn-Green class in few components and view alignment issue in preview video

--- a/src/assets/admin/layout2/css/themes/custom-skin-main-content.css
+++ b/src/assets/admin/layout2/css/themes/custom-skin-main-content.css
@@ -1292,7 +1292,7 @@ a.dropdown-toggle.circlebg-none-v {
 a.dropdown-toggle.circlebg-none-v:hover {
   background-color: var(--top-buton-color) !important;
   opacity: 0.8;
-  color:var(--top-button-value-color) !important;
+  color: var(--top-button-value-color) !important;
 }
 .page-header.navbar
   .top-menu
@@ -1301,7 +1301,7 @@ a.dropdown-toggle.circlebg-none-v:hover {
   .dropdown-toggle.circlebg-color-bell-v:hover {
   background-color: var(--top-buton-color) !important;
   opacity: 0.8;
-  color:var(--top-button-value-color) !important;
+  color: var(--top-button-value-color) !important;
 }
 .page-header.navbar
   .top-menu
@@ -1310,22 +1310,37 @@ a.dropdown-toggle.circlebg-none-v:hover {
   .dropdown-toggle.circlebg-color-bell-v {
   background-color: var(--top-buton-color) !important;
   opacity: 0.8;
-  color:var(--top-button-value-color) !important;
+  color: var(--top-button-value-color) !important;
 }
 .nav .open > a,
 .nav .open > a:focus,
 .nav .open > a:hover {
   background-color: var(--top-buton-color) !important;
   opacity: 0.8;
-  color:var(--top-button-value-color) !important;
-}
-.page-header.navbar .top-menu .navbar-nav > li.dropdown.open .dropdown-toggle.circlebg-color-bell-v > i {
-  color:var(--top-button-value-color) !important;
-}
-.page-header.navbar .top-menu .navbar-nav > li.dropdown .dropdown-toggle.circlebg-color-bell-v:hover > i {
   color: var(--top-button-value-color) !important;
 }
-.page-header.navbar .top-menu .navbar-nav > li.dropdown .dropdown-toggle.circlebg-color-bell-v > i {
+.page-header.navbar
+  .top-menu
+  .navbar-nav
+  > li.dropdown.open
+  .dropdown-toggle.circlebg-color-bell-v
+  > i {
+  color: var(--top-button-value-color) !important;
+}
+.page-header.navbar
+  .top-menu
+  .navbar-nav
+  > li.dropdown
+  .dropdown-toggle.circlebg-color-bell-v:hover
+  > i {
+  color: var(--top-button-value-color) !important;
+}
+.page-header.navbar
+  .top-menu
+  .navbar-nav
+  > li.dropdown
+  .dropdown-toggle.circlebg-color-bell-v
+  > i {
   color: var(--top-button-value-color) !important;
 }
 .btn-primary-light {
